--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -6,7 +6,7 @@ maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
 stability: experimental
 build-type: Simple
 synopsis: A 3D Spiderman-like slinging game.
-build-depends: base, haskell98, GLUT, OpenGL>=2.0, stm, network, unix, template-haskell, random, containers, mtl, clock, MonadRandom
+build-depends: base, haskell98, GLUT, OpenGL>=2.0, stm, network, unix, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, derive, array
 tested-with: GHC==6.6.20070306
 data-files:
   doc/manual.xhtml
@@ -23,7 +23,7 @@ category: games
 executable: slingspace
 main-is: Driver.hs
 hs-source-dirs: src
-ghc-options: -fglasgow-exts -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
+ghc-options: -fglasgow-exts -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind -threaded
 extensions: TemplateHaskell CPP ForeignFunctionInterface
 
 -- executable: slingspace-client
