--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -23,7 +23,7 @@ category: games
 executable: slingspace
 main-is: Driver.hs
 hs-source-dirs: src
-ghc-options: -fglasgow-exts -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind -threaded
+ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind -threaded
 extensions: TemplateHaskell CPP ForeignFunctionInterface
 
 -- executable: slingspace-client
