--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -6,7 +6,7 @@ maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
 stability: experimental
 build-type: Simple
 synopsis: A 3D Spiderman-like slinging game.
-build-depends: base, haskell98, GLUT, OpenGL>=2.0, stm, network, unix, template-haskell, random, containers, mtl, clock, MonadRandom
+build-depends: base, GLUT, OpenGL>=2.0, stm, network, unix, template-haskell, random, containers, mtl, clock, MonadRandom
 tested-with: GHC==6.6.20070306
 data-files:
   doc/manual.xhtml
