--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -1,5 +1,5 @@
 name: slingspace
-version: 20070311
+version: 20121100
 license: PublicDomain
 author: Eelis van der Weegen
 maintainer: slingspace AT contacts DOT eelis ANOTHERDOT net
@@ -7,7 +7,7 @@ stability: experimental
 build-type: Simple
 synopsis: A 3D Spiderman-like slinging game.
 build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record
-tested-with: GHC==6.6.20070306
+tested-with: GHC==7.4
 data-files:
   doc/manual.xhtml
   schemes/cool.scheme
@@ -20,24 +20,14 @@ data-files:
   config/infinite-tunnel.txt
 category: games
 
--- executable: slingspace
--- main-is: Driver.hs
--- hs-source-dirs: src
--- ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind -threaded
--- extensions: TemplateHaskell CPP ForeignFunctionInterface
-
-executable: slingspace-inf
+executable: slingspace
 main-is: local-infinite.hs
 hs-source-dirs: src
 ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
-extensions: TemplateHaskell CPP ForeignFunctionInterface
+extensions: CPP ForeignFunctionInterface
 
--- executable: slingspace-client
--- main-is: client.hs
--- hs-source-dirs: src
--- ghc-options: -fglasgow-exts -fth -cpp -ffi -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds
-
--- executable: slingspace-server
--- main-is: server.hs
--- hs-source-dirs: src
--- ghc-options: -fglasgow-exts -fth -cpp -ffi -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -threaded
+executable: slingspace-bench
+main-is: bench.hs
+hs-source-dirs: src
+ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
+extensions: CPP ForeignFunctionInterface
