--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -32,6 +32,12 @@ hs-source-dirs: src
 ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
 extensions: CPP ForeignFunctionInterface
 
+executable: slingspace-sidekick
+main-is: sidekick.hs
+hs-source-dirs: src
+ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
+extensions: CPP ForeignFunctionInterface
+
 executable: slingspace-bench
 main-is: bench.hs
 hs-source-dirs: src
