--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -32,25 +32,25 @@ executable slingspace
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
 
 executable slingspace-autopilot
   main-is: autopilot.hs
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
 
 executable slingspace-sidekick
   main-is: sidekick.hs
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
 
 executable slingspace-bench
   main-is: bench.hs
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLUT, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, stm, network, template-haskell, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
