Use vector-space operators.

--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -27,11 +27,11 @@ executable slingspace
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl
 
 executable slingspace-autopilot
   main-is: autopilot.hs
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl
