--- a/slingspace.cabal
+++ b/slingspace.cabal
@@ -15,9 +15,10 @@ data-files:
   config/gui.hs
 category: games
 
+
 library
   exposed-modules: SlingSpace.Configuration
-  other-modules: Math, Logic, Util, Octree, Gui, Obstacles, Paths_slingspace, Controllers
+  other-modules: Math, Logic, Util, Octree, Gui, Obstacles, Paths_slingspace, Controllers, GLFWutil
   build-depends: base, vector, deepseq, MonadRandom, clock
   hs-source-dirs: src
   extensions: CPP ForeignFunctionInterface
@@ -27,11 +28,11 @@ executable slingspace
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl, process
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl, process, transformers
 
 executable slingspace-autopilot
   main-is: autopilot.hs
   hs-source-dirs: src
   ghc-options: -O2 -Wall -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind
   extensions: CPP ForeignFunctionInterface
-  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl, process
+  build-depends: base, GLURaw, GLFW-b, OpenGL>=2.0, random, containers, mtl, clock, MonadRandom, deepseq, storablevector, storable-tuple, storable-record, vector, hint, vector-space>0.8.5, vector-space-opengl, process, transformers
